example changes to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,9 @@
     <div id="topbar">
       <img id="logo" src="{{baseURL}}/static/img/kanso_topbar_logo.png" alt="Kanso" />
       <ul id="topnav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/install">Install</a></li>
-        <li><a href="/packages">Packages</a></li>
-        <li class="active"><a href="{{baseURL}}">Docs</a></li>
-        <li><a href="https://github.com/kanso/kanso">Source</a></li>
+        <li><a href="{{baseURL}}">Pages</a></li>
+        <li><a href="{{baseURL}}/_activity">Activity</a></li>
+        <li><a href="{{baseURL}}/_help">Help</a></li>
       </ul>
       {{{include "duality-contrib-session/session.html"}}}
     </div>
@@ -34,18 +32,5 @@
     <script type="text/javascript" src="{{baseURL}}/static/js/highlight/languages/ini.js"></script>
     <script type="text/javascript" src="{{baseURL}}/static/js/highlight/languages/xml.js"></script>
     <script type="text/javascript" src="{{baseURL}}/duality.js"></script>
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-27460379-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
   </body>
 </html>
