--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
       <img id="logo" src="{{baseURL}}/static/img/kanso_topbar_logo.png" alt="Kanso" />
       <ul id="topnav">
         <li><a href="{{baseURL}}">Pages</a></li>
-        <li><a href="{{baseURL}}/_activity">Activity</a></li>
+        <!--<li><a href="{{baseURL}}/_activity">Activity</a></li>-->
         <li><a href="{{baseURL}}/_help">Help</a></li>
       </ul>
       {{{include "duality-contrib-session/session.html"}}}
