--- a/templates/base.html
+++ b/templates/base.html
@@ -4,26 +4,19 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
     <link rel="stylesheet" type="text/css" href="{{baseURL}}/static/css/hljs_javascript.css" />
     <link rel="stylesheet" type="text/css" href="{{baseURL}}/static/css/wiki.css" />
-    <link rel="stylesheet" type="text/css" href="{{baseURL}}/kanso-topbar/topbar.css" />
+    <link rel="stylesheet" type="text/css" href="/dashboard/_design/dashboard/_rewrite/_topbar.css" />
     <title>{{title}}</title> 
   </head> 
-  <body> 
-    <div id="kanso-topbar">
-      <div class="appname">Wiki</div>
-      <ul>
-        <li><a href="{{baseURL}}">Pages</a></li>
-        <!--<li><a href="{{baseURL}}/_activity">Activity</a></li>-->
-        <li><a href="{{baseURL}}/_help">Help</a></li>
-      </ul>
+  <body>
+    <div id="dashboard-topbar">
+
     </div>
     <div id="content">
       {{{content}}}
     </div>
+    <script type="text/javascript" src="{{baseURL}}/static/js/jquery-1.5.2.min.js"></script>
     <script type="text/javascript" src="{{baseURL}}/static/js/json2.js"></script>
     <script type="text/javascript" src="{{baseURL}}/modules.js"></script>
-    <script type="text/javascript">
-        require('kanso-topbar').init();
-    </script>
     <script type="text/javascript" src="{{baseURL}}/static/js/ace/ace.js"></script>
     <script type="text/javascript" src="{{baseURL}}/static/js/ace/mode-markdown3.js"></script>
     <script type="text/javascript" src="{{baseURL}}/static/js/ace/theme-textmate.js"></script>
@@ -34,5 +27,6 @@
     <script type="text/javascript" src="{{baseURL}}/static/js/highlight/languages/ini.js"></script>
     <script type="text/javascript" src="{{baseURL}}/static/js/highlight/languages/xml.js"></script>
     <script type="text/javascript" src="{{baseURL}}/duality.js"></script>
+    <script type="text/javascript" src="/dashboard/_design/dashboard/_rewrite/static/js/topbar.js"></script>
   </body>
 </html>
